...
  "appTitle": "Кінодискавері",
  "homeTitle": "Кінодискавері",
  "tabPopular": "Популярні",
  "tabTopRated": "Топ рейтинг",
  "tabUpcoming": "Очікувані",
  "tabFavorites": "Улюблені",
  "settings": "Налаштування",
  "searchMovies": "Шукати фільми...",
  "searchForMovies": "Пошук фільмів",
  "noMoviesFound": "Не знайдено фільмів за запитом \"{query}\"",
  "noPopularMovies": "Не знайдено популярних фільмів",
  "noTopRatedMovies": "Не знайдено найрейтинговіших фільмів",
  "noUpcomingMovies": "Не знайдено очікуваних фільмів",
...
