...
          Icons.code_rounded,
          color: Theme.of(context).colorScheme.onSurface,
          size: 24,
        ),
      ),
      title: Text(l10n.version),
      subtitle: const Text('0.1.0'),
      trailing: const Icon(Icons.chevron_right_rounded),
      onTap: () {
        _showVersionInfoDialog(context, l10n);
      },
    );
  }
...
